<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88444444"
    tools:context=".ui.BuyInActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="24dp"
        android:transitionName="@string/transition_buyin"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFEA"
            android:orientation="vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyin"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/buyin_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/buyin_checkbox_debt" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DialogButton"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogButton"
                    android:text="@string/btn_confirm"  />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
