<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="24dp"
        android:transitionName="@string/transition_new_player"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFEA"
            android:orientation="vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_player"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newplayer_name_hint"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newplayer_buyin_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DialogButton"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogButton"
                    android:text="@string/btn_confirm" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
