<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="24dp"
        android:transitionName="@string/transition_checkout"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFEA"
            android:orientation="vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <android.support.design.widget.TextInputLayout
                android:animateLayoutChanges="true"
                android:id="@+id/til_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkout_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_details"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBuyIns"
                    style="@style/single_checkout_textview" />

                <TextView
                    android:id="@+id/tvCheckouts"
                    style="@style/single_checkout_textview" />

                <TextView
                    android:id="@+id/tvDebt"
                    style="@style/single_checkout_textview" />

                <TextView
                    android:id="@+id/tvDebtNext"
                    style="@style/single_checkout_textview" />

                <TextView
                    android:id="@+id/tvCashCheckout"
                    style="@style/single_checkout_textview" />

                <TextView
                    android:id="@+id/tvBalance"
                    style="@style/single_checkout_textview" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DialogButton"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogButton"
                    android:text="@string/btn_confirm" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
